updated version of resume

--- a/index.html
+++ b/index.html
@@ -727,12 +727,6 @@ body {
                   Interests
                 </a>
               </li>
-              <li>
-                <a href="#references">
-                  <i class="fa fa-thumbs-up"></i>
-                  References
-                </a>
-              </li>
           </ul>
         </nav>
 
@@ -778,7 +772,7 @@ body {
                     </span>
 
                     <span class="info">
-                      <a href="/cdn-cgi/l/email-protection#f98b969b9b909cd79dd791909a929c80b99e94989095d79a9694" class="link-disguise" itemprop="email"><span class="__cf_email__" data-cfemail="aedcc1ccccc7cb80ca80c6c7cdc5cbd7eec9c3cfc7c280cdc1c3">[email&#160;protected]</span><script cf-hash='f9e31' type="text/javascript">
+                      <a href="/cdn-cgi/l/email-protection#9be9f4f9f9f2feb5ffb5f3f2f8f0fee2dbfcf6faf2f7b5f8f4f6" class="link-disguise" itemprop="email"><span class="__cf_email__" data-cfemail="82f0ede0e0ebe7ace6aceaebe1e9e7fbc2e5efe3ebeeace1edef">[email&#160;protected]</span><script cf-hash='f9e31' type="text/javascript">
 /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */</script></a>
                     </span>
                   </div>
@@ -915,7 +909,7 @@ body {
                           <p>Lead development on an MVP initiative for the company called CloudEPC (http://www.cloudepc.com/), which was designed to bring a modern progress tracking approach to large-scale construction projects.</p>
                             <ul>
                                 <li> CloudEPC successfully completed several pilot projects which converted interested parties into full-time clients, providing new revenue streams as well as a full ROI. </li>
-                                <li> Implemented the look-and-feel, as well as designed the client-side architecture which leveraged KendoUI and its SPA capabilities. </li>
+                                <li> Responsible for the look-and-feel of the application. I also designed the client-side architecture which leveraged KendoUI and its SPA capabilities. </li>
                             </ul>
                         </div>
                       </li>
@@ -1233,12 +1227,23 @@ body {
                       <ul class="list-unstyled">
                           <li class="card card-nested">
                             <p>
-                              <strong>Outdoor</strong>
+                              <strong>Outdoors</strong>
                             </p>
 
                             <div class="space-top labels">
                                 <span class="label label-keyword">Hiking</span>
-                                <span class="label label-keyword">Running</span>
+                                <span class="label label-keyword">Camping</span>
+                                <span class="label label-keyword">Backpacking</span>
+                            </div>
+                          </li>
+                          <li class="card card-nested">
+                            <p>
+                              <strong>Gaming</strong>
+                            </p>
+
+                            <div class="space-top labels">
+                                <span class="label label-keyword">Board Games</span>
+                                <span class="label label-keyword">PC Games</span>
                             </div>
                           </li>
                       </ul>
@@ -1246,38 +1251,6 @@ body {
                   </div>
                 </div>
 
-                <div class="detail" id="references">
-                  <div class="icon">
-                    <i class="fa fa-lg fa-thumbs-up"></i>
-                    <span class="mobile-title">References</span>
-                  </div>
-                  <div class="info">
-                    <h4 class="title text-uppercase">
-                      References
-                    </h4>
-
-                    <div class="content">
-                      <ul class="list-unstyled">
-                          <li class="card card-nested">
-                            <p>
-                              <strong>Frank Benevento</strong>
-                            </p>
-                            <blockquote class="quote">
-                              <p class="clear-margin"></p>
-                            </blockquote>
-                          </li>
-                          <li class="card card-nested">
-                            <p>
-                              <strong>Fred Fulcher</strong>
-                            </p>
-                            <blockquote class="quote">
-                              <p class="clear-margin"></p>
-                            </blockquote>
-                          </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
 
             </div>
           </div>
