Updating to latest version of resume

--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@ body {
                     </span>
 
                     <span class="info">
-                      <a href="/cdn-cgi/l/email-protection#5d2f323f3f343873397335343e3638241d3a303c3431733e3230" class="link-disguise" itemprop="email"><span class="__cf_email__" data-cfemail="f5879a97979c90db91db9d9c969e908cb59298949c99db969a98">[email&#160;protected]</span><script data-cfhash='f9e31' type="text/javascript">
+                      <a href="/cdn-cgi/l/email-protection#d0a2bfb2b2b9b5feb4feb8b9b3bbb5a990b7bdb1b9bcfeb3bfbd" class="link-disguise" itemprop="email"><span class="__cf_email__" data-cfemail="20524f424249450e440e4849434b455960474d41494c0e434f4d">[email&#160;protected]</span><script data-cfhash='f9e31' type="text/javascript">
 /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("data-cfhash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}t.parentNode.removeChild(t);}}catch(u){}}()/* ]]> */</script></a>
                     </span>
                   </div>
@@ -815,7 +815,7 @@ body {
                   </h4>
 
                   <div class="content" itemprop="description">
-                    I’m a highly motivated and adaptable developer with an enthusiasm for new technologies and a passion for writing elegant software. My experience outlined below illustrates a persistent and rapid ability to learn on the job and acquire new skills. I believe that my skill set constitutes a unique candidate that could begin contributing immediately to delivering solutions for your customers.
+                    I’m a highly motivated and adaptable developer with an enthusiasm for new technologies and a passion for writing elegant and maintainable software. My experience illustrates a persistent and rapid ability to learn on the job and acquire new skills. I believe that my skill set constitutes a unique candidate that could begin contributing immediately to delivering solutions for your customers.
                   </div>
                 </div>
               </div>
@@ -882,7 +882,7 @@ body {
                           </p>
                           <p>Responsible for all ongoing maintenance and enhancements for multiple client-facing applications.</p>
                             <ul>
-                                <li> Automated a number of manual business proceses, freeing up over 100 man hours/week. </li>
+                                <li> Automated a number of manual business proceses, freeing up over 100 man hours/month. </li>
                                 <li> Implemented continuous integration leveraging TeamCity for all web applications. </li>
                             </ul>
                         </div>
@@ -891,7 +891,7 @@ body {
                         <div class="content">
                           <p class="clear-margin relative">
                             <strong>Software Consultant</strong>,&nbsp;
-                              <a href="http://www.nexuspmg.com"  target="_blank">Nexux Program Management Group</a>
+                              <a href="http://www.cloudepc.com"  target="_blank">Cloud EPC</a>
                           </p>
                           <p class="text-muted">
                             <small>
@@ -906,10 +906,9 @@ body {
                                 </span>
                             </small>
                           </p>
-                          <p>Lead development on an MVP initiative for the company called CloudEPC (http://www.cloudepc.com/), which was designed to bring a modern progress tracking approach to large-scale construction projects.</p>
+                          <p>Cloud EPC is a new and innovative platform designed to manage large-scale construction projects. My role on this project was serving as front-end lead. I was responsible for bringing the project from an un-styled, static concept to a full-functioning, modular and professionally presented application with a delightful user experience. We leveraged ASP.NET MVC 5 and Web API 2 on the server, while utilizing Bootstrap, jQuery and KendoUI on the front-end.</p>
                             <ul>
-                                <li> CloudEPC successfully completed several pilot projects which converted interested parties into full-time clients, providing new revenue streams as well as a full ROI. </li>
-                                <li> Responsible for the look-and-feel of the application. I also designed the client-side architecture which leveraged KendoUI and its SPA capabilities. </li>
+                                <li> CloudEPC successfully completed their pilot projects which converted interested parties into full-time clients, providing new revenue streams as well as a ROI. </li>
                             </ul>
                         </div>
                       </li>
@@ -932,12 +931,10 @@ body {
                                 </span>
                             </small>
                           </p>
-                          <p>Thomson Reuters presented my first opportunity to work with an international organization. Through this experience I’ve improved upon many of my soft skills and learned to work and communicate effectively with culturally diverse and geographically dispersed teams.</p>
+                          <p>Thomson Reuters presented me with my first opportunity to work with an international organization. Through this experience I improved many of my soft skills and learned to work and communicate effectively with culturally diverse and geographically dispersed teams. During my time at Thomson Reuters I was primarily responsible for the integration points between other internal customers, leveraging a variety of technologies both new and old to meet the requirements of our integration partners. Through this work I was able to thoroughly document the integration processes, removing a blind-spot for the organization. I was also able to incorporate test coverage for the integration points, empowering future developers to make changes with confidence.</p>
                             <ul>
                                 <li> Elected as technical representative for UT career fair on multiple occasions due to my communication skills and passion for technology. </li>
                                 <li> Contributed pull requests to the front-end framework team, a pan Thomson Reuters initiative to formalize and standardize front end libraries, tooling and best practices. </li>
-                                <li> Added test coverage to all integration points where it was previously non-existent. </li>
-                                <li> Took over all legacy integration projects and updated to modern development standards, which included knowledge sharing and dissemination amongst the team. They are now well understood and documented, reducing risk for the organization and empowering all development teams to be cross-functional and agile. </li>
                             </ul>
                         </div>
                       </li>
